gcc/testsuite/rust/rustc/ui/parser/diff-markers/enum-2_dg.rs
enum E {
    Foo {
<<<<<<< HEAD // { dg-error "" "" { target *-*-* } }
        x: u8,
|||||||
        z: (),
=======
        y: i8,
>>>>>>> branch
    }
}

